# spectral-code-challenge

./: Cargo.toml  README.md  meter-usage.proto
api-server/: Cargo.toml  frontend.html
api-server/src/: dataclient.rs  main.rs
data-provider/: Cargo.toml  build.rs
data-provider/src/: datapoint.rs  main.rs  meter.rs  reader.rs
