[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
prost-wkt = "0.4"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
axum = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.9"