[package]
name = "data-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
chrono = "0.4"
anyhow = "1"

[build-dependencies]
tonic-build = "0.9"